# Douyin-casual-games

./: .gitignore
client/: .env.example  README.md  index.html  package-lock.json  package.json
client/dist-minigame-native/: README.md  (+4 more)
docs/: deep-sea-backend-api.md  deep-sea-backend-structure-and-sql.md  deep-sea-development-breakdown.md  deep-sea-frontend-technical-design.md  deep-sea-mvp-checklist.md  deep-sea-project-plan.md  douyin-mini-game-research.md  game-concept-deep-sea-devour-evolution.md  game-concept-fire-devours-world.md  game-concept-ore-devour-forge-weapon.md  three-game-concepts-comparison.md
godot-client/: .gitignore  README.md  project.godot
server/: .env.example  Cargo.toml  README.md
server/migrations/: 0001_init_users_and_archives.sql  0002_add_score_reward_and_event_tables.sql
server/scripts/: apply_migrations.sh
server/src/: app.rs  config.rs  error.rs  main.rs  response.rs  router.rs  state.rs
server/src/db/: postgres.rs
server/src/dto/: ad_reward.rs  analytics.rs  archive.rs  auth.rs  mod.rs  score.rs  user.rs
server/src/extractors/: auth.rs
server/src/handlers/: ad_reward.rs  analytics.rs  archive.rs  auth.rs  health.rs  mod.rs  score.rs  user.rs
server/src/models/: ad_reward.rs  archive.rs  event.rs  mod.rs  score.rs  user.rs
server/src/repositories/: ad_reward_repo.rs  archive_repo.rs  event_repo.rs  mod.rs  score_repo.rs  user_repo.rs
server/src/services/: ad_reward_service.rs  analytics_service.rs  archive_service.rs  auth_service.rs  douyin_auth_service.rs  mod.rs  score_service.rs  user_service.rs
(+49 files in other folders)
